[package]
name = "tree-sitter-commonlisp"
description = "Common Lisp grammar for the tree-sitter parsing library"
version = "0.4.1"
keywords = ["incremental", "parsing", "lisp"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/theHamsta/tree-sitter-commonlisp"
edition = "2024"
authors = ["Stephan Seitz"]
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.0"
