[package]
name = "tree-sitter-devicetree"
description = "devicetree grammar for tree-sitter"
version = "0.10.0"
authors = ["Joel Spadin <joelspadin@gmail.com>"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "devicetree"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/joelspadin/tree-sitter-devicetree"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.21.0"

[build-dependencies]
cc = "1.0.89"
