[package]
name = "tree-sitter-devicetree"
description = "devicetree grammar for the tree-sitter parsing library"
version = "0.4.0"
keywords = ["incremental", "parsing", "devicetree"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/joelspadin/tree-sitter-devicetree"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
