[package]
name = "tree-sitter-foam"
description = "OpenFoam grammar for the tree-sitter parsing library"
version = "0.4.0"
keywords = ["incremental", "parsing", "OpenFOAM", "highlighting"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/FoamScience/tree-sitter-foam"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
