[package]
name = "tree-sitter-gdscript"
description = "Grammar for Godot's built-in scripting language."
version = "6.0.0"
authors = ["Preston Knopp <prestonknopp@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gdscript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/prestonknopp/tree-sitter-gdscript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
