[package]
name = "tree-sitter-gleam"
description = "gleam grammar for the tree-sitter parsing library"
version = "1.0.0"
keywords = ["incremental", "parsing", "gleam"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-gleam"
edition = "2018"
license = "Apache-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[dev-dependencies]
tree-sitter = "0.23"

[build-dependencies]
cc = "1.0"
