[package]
name = "tree-sitter-hack"
description = "hack grammar for the tree-sitter parsing library"
version = "0.0.4"
keywords = ["incremental", "parsing", "hack"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/slackhq/tree-sitter-hack"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.6"

[build-dependencies]
cc = "1.0"
