[package]
name = "tree-sitter-prisma-io"
description = "prisma grammar for the tree-sitter parsing library"
version = "1.4.0"
keywords = ["incremental", "parsing", "prisma"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/victorhqc/tree-sitter-prisma.git"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
